--- a/Yoshida/diagram.html
+++ b/Yoshida/diagram.html
@@ -21,7 +21,7 @@
                 <div align ="right">オフセット<input type="range" name="offset" value="420" size="6" min="-30" max="1320" onChange="changeInput();"></div>
                 <div align ="right">拡大率<input type="range" name="expansion" value="1" size="6" min="0.7" max="8" step="0.1" onChange="changeInput();"></div>
                 <canvas id="canvassample" width="1040" height="400"></canvas>
-                <input type="button" onClick="test()" value="test">
+                <input type="button" onClick="register()" value="登録">
             </td>
             <td valign="top" weidth="400">
                 <table rules=none><tbody id="times">
