Change: 学校行く前に一時保存用.

--- a/admin/diagram.html
+++ b/admin/diagram.html
@@ -30,6 +30,7 @@
 			height: 'auto',
 			cellEdit: true,
 			cellsubmit: 'clientArray',
+			multiselect: true,
 			afterEditCell: function (rowid, cellname, value, iRow, iCol)
 			{
 				if(cellname != "note") {
