Refactor(signage): アプリケーションとサービスを分割して共用可能に #18

--- a/signage.html
+++ b/signage.html
@@ -10,7 +10,8 @@
 		<script src="js/jquery.slabtext.min.js"></script>
 		<script src="js/angular/angular.min.js"></script>
 		<script src="js/angular/angular-resource.min.js"></script>
-		<script src="js/signage_app.js"></script>
+		<script src="js/app/services-diagram.js"></script>
+		<script src="js/app/app-signage.js"></script>
 	</head>
 	<body ng-app="SignageApp" ng-controller="DiagramCtrl" ng-init="routeId = 2;">
 		<header>
