--- a/signage.html
+++ b/signage.html
@@ -23,7 +23,7 @@
 		<ul class="content">
 			<li ng-repeat="dia in diagrams" ng-class="{'next-dia' : dia.is_next}">
 				<p ng-show="dia.is_next" slab-text>@ {{dia.remain_date | date:'hh:mm:ss'}}</p>
-				<span ng-show="!dia.is_next">{{dia.departure_date | date:'hh:mm:ss'}}</span>
+				<span ng-show="!dia.is_next">{{dia.departure_date | date:'hh:mm'}}</span>
 			</li>
 		</ul>
 	</body>
