Change: #25 時刻表のソート(表示件数修正).

--- a/admin/diagram.html
+++ b/admin/diagram.html
@@ -27,6 +27,7 @@
 				{index:'note', name:'note', width:250, editoptions:{maxlength:50}, editable:true, align:'center', sortable:false, resizable:false, frozen:true }
 			],
 			width: 450,
+			rowNum : 1000000,
 			height: 'auto',
 			cellEdit: true,
 			cellsubmit: 'clientArray',
