--- a/signage.html
+++ b/signage.html
@@ -19,11 +19,13 @@
 			</div>
 		</header>
 		<ul class="content">
-			<li ng-repeat="dia in diagrams" ng-class="{'next-dia' : dia.is_next}" ng-show="!dia.is_past">
-				<p ng-show="dia.is_next" auto-resize style="width: auto; display: block; position: relative;">
-					@&nbsp;{{dia.remain_date_str}} <span class="note">{{dia.Note | substring:0:1}}</span>
+			<li class="next-dia" ng-show="next_dia != null">
+				<p auto-resize style="width: auto; display: block; position: relative;">
+					@&nbsp;{{next_dia.remain_date_str}} <span class="note">{{next_dia.Note | substring:0:1}}</span>
 				</p>
-				<p ng-show="!dia.is_next && !dia.is_past">
+			</li>
+			<li ng-repeat="dia in diagrams" ng-show="!dia.is_past">
+				<p ng-show="!dia.is_past">
 					{{dia.departure_date | date:'HH:mm'}}
 					<span class="note">{{dia.Note | substring:0:1}}</span>
 				</p>
