--- a/admin/Calendar/index.html
+++ b/admin/Calendar/index.html
@@ -10,6 +10,9 @@
 <script src='./fullcalendar.min.js'></script>
 <script>
 
+// カレンダーのリスト
+calendarList = new Array();
+
 const SERVER_URL = "http://"+location.host+"/";
 const SERVER_APIURL = SERVER_URL+"api/1.1/";
 
@@ -37,7 +40,14 @@ function initialize_the_calendar() {
 		buttonText: {
 			today: '今日'
 		},
+		eventReceive: function(event, element) {
+			// 新規追加
+			var start = new Date( event.start._d.valueOf() );
+			addCalendarList(event._id, event.title, [start.getFullYear(), start.getMonth() + 1, start.getDate()].join( '-' ), null);
+		},
 		eventClick: function(calEvent, jsEvent, view) {
+			// 削除
+			deleteCalendarList(calEvent._id);
 			$('#calendar').fullCalendar("removeEvents", calEvent._id); //イベント（予定）の削除
 		},
 		// firstDay : 1, // 月曜開始
@@ -49,6 +59,23 @@ function initialize_the_calendar() {
 				// if so, remove the element from the "Draggable Events" list
 				$(this).remove();
 			}
+		},
+		eventDragStop: function(event) {
+		},
+		eventDrop: function( event, delta, revertFunc, jsEvent, ui, view ) {
+			// ドロップ
+			deleteCalendarList(event._id);
+
+			var start = new Date( event.start._d.valueOf() );
+			addCalendarList(event._id, event.title, [start.getFullYear(), start.getMonth() + 1, start.getDate()].join( '-' ), null);			
+		},
+		eventResize: function(event, delta, revertFunc) {
+			// リサイズ その内実装するかもね。
+			//var start = new Date( event.start._d.valueOf() );
+			//var end = new Date( event.end._d.valueOf() );
+			//addCalendarList(event._id, event.title, [start.getFullYear(), start.getMonth() + 1, start.getDate()].join( '-' ), [end.getFullYear(), end.getMonth() + 1, end.getDate()].join( '-' ));
+			alert("1日毎にダイアを指定して下さい。");
+			revertFunc();
 		}
 	});
 
@@ -73,6 +100,24 @@ function initialize_the_external_events() {
 		});
 	
 	});	
+
+}
+
+function addCalendarList(id, title, start, end) {
+
+	calendarList.push({id:id, title:title, start:start, end:end});
+
+}
+
+function deleteCalendarList(id) {
+
+	var target = id;
+
+	var array = calendarList.filter(function(v, i) {
+		return (v.id !== target);
+	});
+
+calendarList = array;
 
 }
 
@@ -119,15 +164,16 @@ function getRouteList() {
 function routeNameChange(obj) {
 
 	$('#calendar').fullCalendar('removeEvents');
-	
-	var element = document.getElementById("Dias");
+
+	var element = document.getElementById("dias");
 	if(element.childNodes.length > 0) {
-		$("#Dias").children().remove();
+		$("#dias").children().remove();
 	}
 	
 	initialize_the_calendar();
 
 	var view = $('#calendar').fullCalendar('getView');
+
 	$.ajax({
 		url: "event.json",
 		dataType: 'json',
@@ -139,6 +185,13 @@ function routeNameChange(obj) {
 		},
 		success: function(EventSource) {
 			$('#calendar').fullCalendar('addEventSource', EventSource);
+
+			// カレンダーのリストに初期登録
+			EventSource.forEach(function(val, index) {
+
+				addCalendarList('_fc'+(index+1), val.title, val.start, null);
+			});
+
 		}
 	});
 		
@@ -173,7 +226,7 @@ function routeNameChange(obj) {
 						var element = document.createElement("div");
 						element.className = 'fc-event';
 						element.innerHTML = a.id + ': ' + a.DiaName;
-						document.getElementById("Dias").appendChild(element);
+						document.getElementById("dias").appendChild(element);
 					});
 					
 					initialize_the_external_events();
@@ -277,7 +330,7 @@ function routeNameChange(obj) {
 		margin-right: auto;
 	}
 	
-	#Header {
+	#header {
 		text-align: left;
 		vertical-align: middle;
 	}
@@ -289,7 +342,7 @@ function routeNameChange(obj) {
 	<table border="0">
 
 	<tr>
-	<td id = "Header">
+	<td id = "header">
 	<form name="diagram">
 		<div>路線名：
 			<select name="routeNameList" id="routeName" onChange="routeNameChange(this);"></select>
@@ -314,7 +367,7 @@ function routeNameChange(obj) {
 
 		<div id='external-events'>
 			<h4>ダイアグループ</h4>
-			<div id='Dias'></div>
+			<div id='dias'></div>
 			<p>
 				<input type='checkbox' id='drop-remove' />
 				<label for='drop-remove'>remove after drop</label>
