Fix: カレンダー切替時の初期化漏れ修正

--- a/admin/Calendar/index.html
+++ b/admin/Calendar/index.html
@@ -224,6 +224,7 @@ function getRouteList() {
  */
 function routeNameChange(obj) {
 
+	calendarList = new Array();
 	$('#calendar').fullCalendar('removeEvents');
 
 	var element = document.getElementById("dias");
