--- a/admin/calendar.html
+++ b/admin/calendar.html
@@ -48,7 +48,7 @@ function initialize_the_calendar() {
 		},
 		eventClick: function(calEvent, jsEvent, view) {
 			// 削除
-			deleteCalendarList(calEvent._id);
+			deleteCalendarList(calEvent._id);			
 			$('#calendar').fullCalendar("removeEvents", calEvent._id); //イベント（予定）の削除
 		},
 		// firstDay : 1, // 月曜開始
@@ -233,7 +233,7 @@ function routeNameChange(obj) {
 	routeId = obj.options[obj.selectedIndex].value;
 	
 	$('#calendar').fullCalendar('removeEvents');
-
+	
 	var element = document.getElementById("dias");
 	if(element.childNodes.length > 0) {
 		$("#dias").children().remove();
@@ -253,7 +253,9 @@ function routeNameChange(obj) {
 			"id": routeId
 		},
 		success: function(EventSource) {
+
 			$('#calendar').fullCalendar('addEventSource', EventSource);
+//			console.log($('#calendar').fullCalendar('clientEvents'));
 
 			// カレンダーのリストに初期登録
 			EventSource.forEach(function(val, index) {
