Fix(mobile): コメントの修正

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<a ng-href="#/routes"><i class="fa fa-bus" style="margin-right: 0.5rem;"></i>&nbsp;OECU&nbsp;バス時刻表 β.ver</a>
 			</div>
 		</header>
-		<!-- Insert partial template from /partials/mobile/*.html -->
+		<!-- Insert partial template from /templates/mobile/*.html -->
 		<ng-view></ng-view>
 		<!---->
 		<footer>
