--- a/signage.html
+++ b/signage.html
@@ -5,7 +5,6 @@
 		<title>スクールバス時刻表</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 		<link rel="stylesheet" href="css/signage.css" />
-		<link rel="stylesheet" href="css/slabtext.css" />
 		<script src="js/jquery-1.11.3.min.js"></script>
 		<script src="js/angular/angular.min.js"></script>
 		<script src="js/angular/angular-resource.min.js"></script>
@@ -15,19 +14,19 @@
 	<body ng-app="SignageApp" ng-controller="TimetableCtrl" ng-init="routeId = 2;">
 		<header>
 			<div>
-				{{route.ArrivalLocation}}&nbsp;&nbsp;行
+				{{route.arrivalLocation}}&nbsp;&nbsp;行
 			</div>
 		</header>
 		<ul class="content">
 			<li class="next-dia" ng-show="nextBus != null">
 				<p auto-resize style="width: auto; display: block; position: relative;">
-					@&nbsp;{{nextBus.RemainDateStr}} <span class="note">{{nextBus.Note | substring:0:1}}</span>
+					@&nbsp;{{nextBus.remainDateStr}} <span class="note">{{nextBus.note | substring:0:1}}</span>
 				</p>
 			</li>
-			<li ng-repeat="bus in buses" ng-show="!bus.IsPast">
-				<p ng-show="!bus.IsPast">
-					{{bus.DepartureDate | date:'HH:mm'}}
-					<span class="note">{{bus.Note | substring:0:1}}</span>
+			<li ng-repeat="bus in buses" ng-show="!bus.isPast">
+				<p ng-show="!bus.isPast">
+					{{bus.departureDate | date:'HH:mm'}}
+					<span class="note">{{bus.note | substring:0:1}}</span>
 				</p>
 			</li>
 		</ul>
