--- a/signage.html
+++ b/signage.html
@@ -8,6 +8,7 @@
 		<script src="js/jquery-1.11.3.min.js"></script>
 		<script src="js/angular/angular.min.js"></script>
 		<script src="js/angular/angular-resource.min.js"></script>
+		<script src="js/angular/auto-resize.js"></script>
 		<script src="js/app/services-diagram.js"></script>
 		<script src="js/app/app-signage.js"></script>
 	</head>
@@ -19,7 +20,7 @@
 		</header>
 		<ul class="content">
 			<li class="next-dia" ng-show="nextBus != null">
-				<p auto-resize style="width: auto; display: block; position: relative;">
+				<p auto-resize="nextBus.remainDateStr" style="width: auto; display: block; position: relative;">
 					@&nbsp;{{nextBus.remainDateStr}} <span class="note">{{nextBus.note | substring:0:1}}</span>
 				</p>
 			</li>
