--- a/signage.html
+++ b/signage.html
@@ -18,6 +18,11 @@
 				{{route.arrivalLocation}}&nbsp;&nbsp;行
 			</div>
 		</header>
+		<div class="message">
+			<span class="end-day" auto-resize ng-show="buses == null || buses.length == 0">
+				本日の営業は<br/>終了しました
+			</span>
+		</div>
 		<ul class="content">
 			<li class="next-dia" ng-show="nextBus != null">
 				<p auto-resize="nextBus.remainDateStr" style="width: auto; display: block; position: relative;">
