Change: API version changeover of management page #71

--- a/admin/diagram.html
+++ b/admin/diagram.html
@@ -92,10 +92,11 @@
 			<select name="routeNameList" id="routeName" onChange="routeNameChange(this);">
 				<option Value="-1">新規登録</option>
 			</select>
+			<input type="text" name="routePrefixNew">
 			<input type="text" name="routeNameNew">
 		</div>
 
-		<div>ダイヤグループ：
+		<div>ダイヤ：
 			<select name="diaNameList" id="diaName" onChange="diaNameChange(this);">
 				<option value="-1">新規登録</option>
 			</select>
@@ -103,7 +104,7 @@
 		</div>
 
 		<div>
-			運営：<input type="text" name="management">
+			運営　：<input type="text" name="management">
 			出発地点：<input type="text" name="departureLocation">
 			到着地点：<input type="text" name="arrivalLocation">
 		</div>
